// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AgentNotificationsMenu /> parent window is different doesn't render the visual notification option 1`] = `
<Fragment>
  <styled.div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
    <Styled(CheckedIconSVG)
      alt="selected"
      fillColor="black"
      size={17}
    />
  </styled.div>
</Fragment>
`;

exports[`<AgentNotificationsMenu /> parent window is the same notifications disabled does not render the checkboxes 1`] = `
<Fragment>
  <styled.div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
  </styled.div>
  <styled.div
    id="visualNotificationOption"
    key="visualNotificationOption"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Visual Notifications"
      id="app.containers.AgentNotificationsMenu.visual"
      values={Object {}}
    />
  </styled.div>
</Fragment>
`;

exports[`<AgentNotificationsMenu /> parent window is the same notifications enabled renders the checkboxes 1`] = `
<Fragment>
  <styled.div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
    <Styled(CheckedIconSVG)
      alt="selected"
      fillColor="black"
      size={17}
    />
  </styled.div>
  <styled.div
    id="visualNotificationOption"
    key="visualNotificationOption"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Visual Notifications"
      id="app.containers.AgentNotificationsMenu.visual"
      values={Object {}}
    />
    <Styled(CheckedIconSVG)
      alt="selected"
      fillColor="black"
      size={17}
    />
  </styled.div>
</Fragment>
`;
